[package]
name = "jmc"
version = "0.1.0"
edition = "2021"

[features]
default = ["native-tls"]
native-tls = ["matrix-sdk/native-tls"]
rustls-tls = ["matrix-sdk/rustls-tls"]

[dependencies]
anyhow = "1.0.45"
dirs = "4.0.0"
druid = { git = "https://github.com/linebender/druid" }
druid-widget-nursery = { git = "https://github.com/linebender/druid-widget-nursery" }
once_cell = "1.8.0"
serde = "1.0.130"
serde_json = "1.0.71"
tracing-subscriber = "0.3.1"
tracing = "0.1.29"
tokio = { version = "1.13.0", features = ["fs", "sync", "rt-multi-thread"] }
task-group = "0.2.1"

[dependencies.matrix-sdk]
git = "https://github.com/jplatte/matrix-rust-sdk"
branch = "client-arc"
default-features = false
features = [
    "encryption",
    "sled_cryptostore",
    "sled_state_store",
]

[patch."https://github.com/linebender/druid".druid]
git = "https://github.com/jplatte/druid"
branch = "hacky-password-support"
