[package]
name = "jmc"
version = "0.1.0"
edition = "2021"

[features]
default = ["native-tls", "gtk"]

gtk = ["druid/gtk"]
wayland = ["druid/wayland"]
x11 = ["druid/x11"]

native-tls = ["matrix-sdk/native-tls"]
rustls-tls = ["matrix-sdk/rustls-tls"]

[dependencies]
anyhow = "1.0.45"
dirs = "4.0.0"
druid = { git = "https://github.com/linebender/druid", features = ["image", "jpeg", "png"] }
druid-widget-nursery = { git = "https://github.com/linebender/druid-widget-nursery" }
once_cell = "1.8.0"
serde = "1.0.130"
serde_json = "1.0.71"
tracing-subscriber = "0.3.1"
tracing = "0.1.29"
tokio = { version = "1.13.0", features = ["fs", "sync", "rt-multi-thread"] }
paste = "1.0.6"

[dependencies.matrix-sdk]
git = "https://github.com/matrix-org/matrix-rust-sdk"
default-features = false
features = [
    "encryption",
    "markdown",
    "sled_cryptostore",
    "sled_state_store",
]

[patch."https://github.com/linebender/druid".druid]
git = "https://github.com/jplatte/druid"
branch = "jmc"

[patch."https://github.com/linebender/druid-widget-nursery".druid-widget-nursery]
git = "https://github.com/xarvic/druid-widget-nursery"
branch = "fix_enum_switcher"

# Optimize perf-relevant and crypto packages even in debug builds
[profile.dev.package]
bytes = { opt-level = 2 }
curve25519-dalek = { opt-level = 2 }
ed25519-dalek = { opt-level = 2 }
h2 = { opt-level = 2 }
http = { opt-level = 2 }
hyper = { opt-level = 2 }
im = { opt-level = 2 }
image = { opt-level = 2 }
jpeg-decoder = { opt-level = 2 }
futures-channel = { opt-level = 2 }
futures-core = { opt-level = 2 }
futures-util = { opt-level = 2 }
parking_lot = { opt-level = 2 }
png = { opt-level = 2 }
rustls = { opt-level = 2 }
serde_json = { opt-level = 2 }
sled = { opt-level = 2 }
tokio = { opt-level = 2 }
