[package]
name = "jmc"
version = "0.1.0"
edition = "2021"

[features]
default = ["native-tls"]

native-tls = ["matrix-sdk/native-tls"]
rustls-tls = ["matrix-sdk/rustls-tls"]

[dependencies]
anyhow = "1.0.45"
dirs = "6.0.0"
once_cell = "1.8.0"
matrix-sdk = { version = "0.12.0", default-features = false, features = ["e2e-encryption", "markdown", "sqlite"] }
matrix-sdk-ui = "0.12.0"
ruma = "0.12.3"
serde = "1.0.130"
serde_json = "1.0.71"
tracing-subscriber = "0.3.1"
tracing = "0.1.29"
tokio = { version = "1.13.0", features = ["fs", "sync", "rt-multi-thread"] }
tokio-stream = "0.1.8"
xilem = "0.3.0"

# Optimize perf-relevant and crypto packages even in debug builds
[profile.dev.package]
bytes = { opt-level = 2 }
curve25519-dalek = { opt-level = 2 }
ed25519-dalek = { opt-level = 2 }
h2 = { opt-level = 2 }
http = { opt-level = 2 }
hyper = { opt-level = 2 }
im = { opt-level = 2 }
image = { opt-level = 2 }
jpeg-decoder = { opt-level = 2 }
futures-channel = { opt-level = 2 }
futures-core = { opt-level = 2 }
futures-util = { opt-level = 2 }
parking_lot = { opt-level = 2 }
png = { opt-level = 2 }
rustls = { opt-level = 2 }
serde_json = { opt-level = 2 }
sled = { opt-level = 2 }
tokio = { opt-level = 2 }
